更新薪资的部分功能

--- a/src/main/resources/templates/salaryStandard.html
+++ b/src/main/resources/templates/salaryStandard.html
@@ -109,14 +109,14 @@
                     </a>
                 </td>
                 <td th:if="${session.user.getUserRoleName()=='薪酬专员'}">
-                    <a th:if="${salaryStandard.getStatusName()}=='起草'"
+                    <a th:if="${salaryStandard.getStatusName()}=='起草' or ${salaryStandard.getStatusName()}=='驳回'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
                         <button type="button" class="btn btn-outline-primary">修改</button>
                     </a>
-                    <a th:if="${salaryStandard.getStatusName()}=='驳回'"
-                       th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
-                        <button type="button" class="btn btn-outline-primary">修改</button>
-                    </a>
+                    <!--<a th:if="${salaryStandard.getStatusName()}=='驳回'"-->
+                       <!--th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">-->
+                        <!--<button type="button" class="btn btn-outline-primary">修改</button>-->
+                    <!--</a>-->
                     <a th:if="${salaryStandard.getStatusName()}=='通过'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'change')}">
                         <button type="button" class="btn btn-outline-primary">变更</button>
