--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -34,32 +34,37 @@
                     '                    </td>\n' +
                     '                    <td>\n' +
                     '                        <div class="col-sm-10">\n' +
-                    '                            <input type="text" class="form-control si" placeholder="必填" name="paymentCode"\n' +
+                    '                            <input type="text" class="form-control si" name="paymentCode"\n' +
                     '                                   >\n' +
                     '                        </div>\n' +
                     '                    </td>\n' +
                     '                    <td>\n' +
                     '                        <div class="col-sm-10">\n' +
-                    '                            <input type="text" class="form-control si" placeholder="必填" name="paymentCount"\n' +
-                    '                                   >\n' +
+                    '                            <input type="text" class="form-control si" name="paymentCount"\n' +
+                    '                                >\n' +
                     '                        </div>\n' +
                     '                    </td>\n' +
-                    '                    <td></td>\n' +
+                    '                    <td>' +
+                    '                       <div class="col-sm-10">\n' +
+                '                            <input type="text" id="pNum" class="form-control si" name="peopleNumber"\n' +
+                '                               >\n' +
+                '                        </div>\n' +
+                    '            </td>\n' +
                     '                    <td>\n' +
                     '                        <div class="col-sm-10">\n' +
-                    '                            <input type="text" class="form-control si" placeholder="必填" name="salaryTotal"\n' +
-                    '                                   >\n' +
+                    '                            <input type="text" class="form-control si" name="salaryTotal"\n' +
+                    '                               >\n' +
                     '                        </div>\n' +
                     '                    </td>\n' +
                     '                    <td>\n' +
                     '                        <div class="col-sm-10">\n' +
-                    '                            <input type="text" class="form-control si" placeholder="必填" name="ActualTotal"\n' +
-                    '                                   >\n' +
+                    '                            <input type="text" class="form-control si" name="ActualTotal"\n' +
+                    '                               >\n' +
                     '                        </div>\n' +
                     '                    </td>\n' +
                     '                    <td>\n' +
                     '                        <div class="col-sm-10">\n' +
-                    '                            <input id="datepicker1" name="lastTime">\n' +
+                    '                            <input id="datepicker1" name="last">\n' +
                     '                <script>\n' +
                     '                    $(\'#datepicker1\').datepicker({\n' +
                     '                        uiLibrary: \'bootstrap4\'\n' +
@@ -136,6 +141,8 @@
                 let id = radio.val();
                 if (id == -1) {
                     radio.parent().parent().parent().remove();
+                    successAlert();
+                    closeAlert();
                     return;
                 }
                 if (confirm("确认删除吗?")) {
@@ -196,7 +203,7 @@
         <button type="button" class="btn btn-outline-danger" id="delete">删除</button>
     </div>
     <div>
-        <form name="salaryItemList" id="paymentForm">
+        <form name="paymentList" id="paymentForm">
             <table class="table table-bordered" id="paymentTable">
                 <thead>
                 <tr>
@@ -215,39 +222,39 @@
                     <td>
                         <div class="custom-control custom-radio">
                             <input type="radio" name="dr"
-                                   class="custom-control-input dr" th:value="${payment.getId()}"
+                                   class="custom-control-input dr" th:value="${payment.getPaymentCode()}"
                                    th:id="customRadio+${status.count}">
                             <label class="custom-control-label" th:for="customRadio+${status.count}"></label>
                         </div>
                     </td>
                     <td>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control si" placeholder="必填" name="paymentCode"
+                            <input type="text" class="form-control si" name="paymentCode"
                                    th:value="${payment.getPaymentCode()}">
                         </div>
                     </td>
                     <td>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control si" placeholder="必填" name="paymentCount"
-                                   th:value="${payment.getPaymentCount()}">
+                            <input type="text" class="form-control si" name="paymentCount"
+                                   th:value="${payment.getPaymentCount()}" readonly>
                         </div>
                     </td>
-                    <td></td>
+                    <td th:text="${payment.getPeopleNumber()}"></td>
                     <td>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control si" placeholder="必填" name="salaryTotal"
-                                   th:value="${payment.getSalaryTotal()}">
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control si" placeholder="必填" name="ActualTotal"
-                                   th:value="${payment.getActualTotal()}">
+                            <input type="text" class="form-control si"  name="salaryTotal"
+                                   th:value="${payment.getSalaryTotal()}" readonly>
                         </div>
                     </td>
                     <td>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control si" placeholder="必填" name="lastTime"
+                            <input type="text" class="form-control si" name="ActualTotal"
+                                   th:value="${payment.getActualTotal()}" readonly>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control si" name="lastTime"
                                    th:value="${#dates.format(payment.getLastTime(),'yyyy/MM/dd')}">
                         </div>
                     </td>
@@ -271,12 +278,16 @@
                 </thead>
                 <tbody>
                 <tr th:each="department,status:${depList}" th:if="${department.getHigherOffice()}!=0">
-                    <td th:text="${status.count}"></td>
+                    <td th:text="${status.count}-1"></td>
                     <td th:text="${department.getHigherOfficeName()}"></td>
                     <td th:text="${department.getDepName()}"></td>
                     <td th:text="${department.getpNum()}"></td>
                     <td th:text="${department.getTotalSs()}"></td>
-                    <td></td>
+                    <td>
+                        <a th:href="@{/showPayroll(paymentCode = '111',depId = ${department.getId()})}">
+                            <button type="button" class="btn btn-outline-primary">登记</button>
+                        </a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
