--- a/src/main/resources/templates/payroll.html
+++ b/src/main/resources/templates/payroll.html
@@ -20,8 +20,8 @@
 <body>
 <div style="margin: 10px">
     <button type="button" class="btn btn-outline-success" id="save">保存</button>
-    <button type="button" class="btn btn-outline-primary" id="insert" th:if="${payment.}">提交</button>
-    <button type="button" class="btn btn-outline-secondary" id="cancel">返回</button>
+    <button type="button" class="btn btn-outline-primary" id="insert" >提交</button>
+    <a href="paymentAdd"><button type="button" class="btn btn-outline-secondary" id="cancel">返回</button></a>
 </div>
 <div>
     <form name="payrollList" id="depForm">
