--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,20 +7,23 @@
 	<title>人事档案登记</title>
 	<!-- Bootstrap -->
 	<link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Font Awesome -->
 	<link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<!-- NProgress -->
 	<link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
-	<!-- iCheck -->
 	<link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
-	<!-- bootstrap-wysiwyg -->
 	<link href="../vendors/google-code-prettify/bin/prettify.min.css" rel="stylesheet">
-	<!-- Select2 -->
 	<link href="../vendors/select2/dist/css/select2.min.css" rel="stylesheet">
-	<!-- Switchery -->
 	<link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
-	<!-- starrr -->
 	<link href="../vendors/starrr/dist/starrr.css" rel="stylesheet">
+
+
+
+	<link href="../vendors/normalize-css/normalize.css" rel="stylesheet">
+	<link href="../vendors/ion.rangeSlider/css/ion.rangeSlider.css" rel="stylesheet">
+	<link href="../vendors/ion.rangeSlider/css/ion.rangeSlider.skinFlat.css" rel="stylesheet">
+	<link href="../vendors/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" rel="stylesheet">
+	<link href="../vendors/cropper/dist/cropper.min.css" rel="stylesheet">
+	<link href="../build/css/custom.min.css" rel="stylesheet">
+	<link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		ul li{
 			list-style: none;
@@ -82,7 +85,7 @@
 		<ul>
 
 			<li class="lefttop">
-				<div class="item form-group">
+				<div class="item form-group" style="cursor:pointer">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="depName">所属部门 <span class="required">*</span>
 					</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
@@ -120,7 +123,7 @@
 				</div>
 			</li>
 			<span id="pic"></span>
-			<li class="lefttop">
+			<li class="lefttop" style="cursor:pointer">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">职位名称:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
@@ -150,7 +153,7 @@
 			</li>
 
 			<li class="lefttop"></li>
-			<li class="lefttop">
+			<li class="lefttop" style="cursor:pointer">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">职称名称:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
