--- a/src/main/resources/templates/yonghuguanlixiugai.html
+++ b/src/main/resources/templates/yonghuguanlixiugai.html
@@ -84,7 +84,7 @@
                                 <input th:value="${user.depName}"  readonly="readonly" id="depName" type="text" name="depName"
                                        data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
                                 <input type="hidden"  id="depId" name="depId" th:value="${user.depId}" >
-                            </div><i  id="myBT"  class="fa fa-search-plus"></i>
+                            </div><i style="cursor:pointer" id="myBT"  class="fa fa-search-plus"></i>
                             <div id="yincang" >
                                 <ul  >
 
