--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,8 @@
             <form th:action="@{/login}" method="post">
   <!--<input name="userid" type="hidden" th:value="${user.id}">-->
               <h1>登录</h1>
-              <span th:value="${error}"></span>
+
+                <span th:text="${error}"></span>
               <div>
                 <input name="userCode" type="text" class="form-control" placeholder="用户名" required="" />
               </div>
