--- a/src/main/resources/templates/renshidanganbiangengfuhe.html
+++ b/src/main/resources/templates/renshidanganbiangengfuhe.html
@@ -108,10 +108,11 @@
 							</div>-->
 						<div class="image view view-first">
 							<img style="width:160px;height:160px; display:block;" th:src="${archive.photoPath}"  alt="">
+							<input type="hidden" id="photo" name="photos" th:value="${archive.photoPath}" required="required" class="form-control col-md-7 col-xs-12">
 
 						</div>
 					</li>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="item form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="depName">所属部门 <span class="required">*</span>
 							</label>
@@ -146,13 +147,9 @@
 
 					<li class="lefttop">
 
-						<div class="image view view-first">
-							<img style="width:160px;height:160px; display:block;" th:src="${archive.photoPath}"  alt="">
-							<input type="hidden" id="photo" name="photos" th:value="${archive.photoPath}" required="required" class="form-control col-md-7 col-xs-12">
 
-						</div>
 					</li>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12">职位名称:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
@@ -181,7 +178,7 @@
 					<li class="lefttop">
 
 					</li>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12">职称名称:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
@@ -407,7 +404,7 @@
 								<input id="annex" type="file" th:value="${archive.annex}" class="form-control col-md-6 col-sm-6 col-xs-12" name="docFile">
 								<span style="color:red;display: inline-block; font-weight: bold;">*注：1、大小不得超过500m.2、文件类型：doc</span>
 							</div>
-							<div class="col-md-11 col-sm-11 col-xs-12" id="docFile"></div>
+							<div class="col-md-10 col-sm-10 col-xs-12" id="docFile"></div>
 						</div>
 
 					</li>
