--- a/src/main/resources/templates/renshidanganxiugai.html
+++ b/src/main/resources/templates/renshidanganxiugai.html
@@ -80,7 +80,7 @@
 				<input type="hidden" id="id" name="id" th:value="${archive.id}" required="required" class="form-control col-md-7 col-xs-12">
 
 				<ul>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="item form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="depName">所属部门 <span class="required">*</span>
 							</label>
@@ -121,7 +121,7 @@
 
 						</div>
 					</li>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12">职位名称:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
@@ -150,7 +150,7 @@
 					<li class="lefttop">
 
 					</li>
-					<li class="lefttop">
+					<li class="lefttop" style="cursor:pointer">
 						<div class="form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12">职称名称:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
