--- a/src/main/resources/templates/salaryStandard.html
+++ b/src/main/resources/templates/salaryStandard.html
@@ -83,7 +83,7 @@
                 <td th:text="${salaryStandard.getStandardName()}"></td>
                 <td th:text="${salaryStandard.getStatusName()}"></td>
                 <td th:text="${#dates.format(salaryStandard.getCreateDate(),'MM/dd/yyyy')}"></td>
-                <td th:if="${session.user.getUserRoleName()=='薪酬经理'}">
+                <td th:if="${session.userSession.dataName=='薪酬经理'}">
                     <a th:if="${salaryStandard.getStatusName()}=='起草'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
                         <button type="button" class="btn btn-outline-primary">修改</button>
@@ -108,7 +108,7 @@
                         <button type="button" class="btn btn-outline-danger">删除</button>
                     </a>
                 </td>
-                <td th:if="${session.user.getUserRoleName()=='薪酬专员'}">
+                <td th:if="${session.userSession.dataName=='薪酬专员'}">
                     <a th:if="${salaryStandard.getStatusName()}=='起草' or ${salaryStandard.getStatusName()}=='驳回'"
                        th:href="@{/operatingSalaryStandard(id=${salaryStandard.getId()},operating = 'update')}">
                         <button type="button" class="btn btn-outline-primary">修改</button>
