--- a/src/main/resources/templates/zhiweiguanlixiugai.html
+++ b/src/main/resources/templates/zhiweiguanlixiugai.html
@@ -78,7 +78,7 @@
 								<div class="col-md-6 col-sm-6 col-xs-12">
 									<input   readonly="readonly" id="depName" type="text" name="depName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 									<input type="hidden"  id="depId" name="depId">
-								</div><i  id="myBT"  class="fa fa-search-plus"></i>
+								</div><i style="cursor:pointer" id="myBT"  class="fa fa-search-plus"></i>
 								<div id="yincang" >
 									<ul  >
 
