--- a/src/main/resources/templates/salaryItem.html
+++ b/src/main/resources/templates/salaryItem.html
@@ -18,6 +18,7 @@
             crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
+
             var idNum = 100;
             //添加，页面增加新的空行
             $('#insert').click(function () {
@@ -65,6 +66,7 @@
                 $("#l2").attr("id", 'l2' + idNum + '');
                 idNum++;
             });
+
             //获取表格的修改状态
             $(".si").change(function () {
                 let hidden = $(this).parent().parent().parent().children("input:last");
@@ -74,6 +76,16 @@
             });
             //保存，保存修改和添加的数据
             $.fn.serializeJson = function () {
+                var flag = 0;
+                $(".must").change(function () {
+                    if ($(this).val()==''){
+                        flag = 1;
+                        alert('字段不能为空');
+                    }
+                });
+                if(flag == 1){
+                    return;
+                }
                 let jsonData1 = {};
                 let serializeArray = this.serializeArray();
                 // 先转换成{"id": ["12","14"], "name": ["aaa","bbb"], "pwd":["pwd1","pwd2"]}这种形式
@@ -122,6 +134,7 @@
                     success: function (data) {
                         if (data == "success") {
                             successAlert();
+                            closeAlert();
                             window.location.reload();
                         } else if (data == "error") {
                             failAlert();
@@ -223,13 +236,13 @@
                 </td>
                 <td align="center">
                     <div class="col-sm-10">
-                        <input type="text" class="form-control si" placeholder="必填" th:name="itemCode"
-                               th:value="${salaryItem.getItemCode()}">
+                        <input type="text" class="form-control si must" placeholder="必填" th:name="itemCode"
+                               th:value="${salaryItem.getItemCode()}" >
                     </div>
                 </td>
                 <td align="center">
                     <div class="col-sm-10">
-                        <input type="text" class="form-control si" placeholder="必填" th:name="itemName"
+                        <input type="text" class="form-control si must" placeholder="必填" th:name="itemName"
                                th:value="${salaryItem.getItemName()}">
                     </div>
                 </td>
