--- a/src/main/resources/templates/sidChange.html
+++ b/src/main/resources/templates/sidChange.html
@@ -18,9 +18,11 @@
     <title>薪资标准变更</title>
     <script>
         $(function () {
+            const pattern = /^[0-9]+(.[0-9]{1,3})?$/;
             calculateSum();
             //保存，保存修改和添加的数据
             $.fn.serializeJson = function () {
+
                 var jsonData1 = {};
                 var serializeArray = this.serializeArray();
                 // 先转换成{"id": ["12","14"], "name": ["aaa","bbb"], "pwd":["pwd1","pwd2"]}这种形式
@@ -58,6 +60,9 @@
             };
             //获取表格的修改状态
             $(".itemAmount").change(function () {
+                if ($(this).val() == '' || pattern.test($(this).val()) == false) {
+                    $(this).val(0.00);
+                }
                 //动态计算总额
                 calculateSum();
                 let hidden = $(this).parent().parent().children("input:last");
